--- a/css1/style.css
+++ b/css1/style.css
@@ -1,11 +1,15 @@
 #HTML{
-    background-image: url(pic1.png);
+    background-image: url(pic11.jpg);
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #HTU{
-    background-image: url(pic2.jpg);
+    background-image: url(pic22.avif);
     background-size: cover;
     background-attachment: scroll;
+    background-position: center;
+    background-repeat: no-repeat;
 }
