--- a/whatsApp/style.css
+++ b/whatsApp/style.css
@@ -1,188 +1,177 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-header{
-    border: 1px solid black;
-    background: #ECE5DD;
-    
-}
-.parent{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 
-
-.sidebar{
-    width: 50px;
-    background-color: #ECE5DD;
-    border-right: 1px solid #ccc;
-    display: flex;
-    flex-direction: column; 
-    align-items: center; 
-
+  /* لما اعمل الاوفرفلو السايد بار يختفي نصه */
+  /* overflow: hidden; */
 }
-.list{
-    flex: 1; 
-    background-color: #ECE5DD;
-    border-right: 1px solid #ccc;
-    overflow: scroll;
-    height: 100vh;
-
+header {
+  border: 1px solid black;
+  background: #F3F3F3;
+}
+.parent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.chats{
-    flex: 3; 
-    background-color: #FFFFFF;
-    border: 1px solid green;
-    overflow: scroll;
-    height: 100vh;
-
+.sidebar {
+  width: 60px;
+  background-color: #F3F3F3;
+  border-right: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-/* .flex{
-    display:flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 5px;
-    max-width: 1000px;
-    border: 1px solid rgb(0, 103, 0);
-    align-items: center;
-
-} */
-
-/* .item{
-    width:50px;
-    display: flex;
-    flex-direction: column;
-
-} */
-
-.navBar{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100vh;
-    flex-wrap: wrap;
-    width: 10px;
+.list {
+  flex: 1;
+  background-color: #FEFEFE;
+  border-right: 1px solid #ccc;
+  overflow: scroll;
+  height: 100vh;
 }
 
-.icon{
-    color: #25D366;
-   font-size: 20px;
- 
-
-
-}
-.icon1{
-    display: flex;
-    flex-direction: column;
-    gap:10px;
-
+.chats {
+  flex: 3;
+  background-color: #ffffff;
+  border: 1px solid #1fa65a;
+  overflow: auto;
+  height: 100vh;
 }
 
-.chatList{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-}
-.head{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    position:sticky;
+.navBar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  flex-wrap: wrap;
+  width: 10px;
 }
 
-img{
-    width: 60px;
-    height: 60px;
-    border-radius: 30px;
+.icon {
+  color: #1fa65a;
+  font-size: 20px;
+}
+.icon1 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-h5{
-    background: #25D366;
-    height: 15px;
-    width: 15px;
-    text-align: center;
-    border-radius: 15px;
+.chatList {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.head {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
-.user{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+img {
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
 }
 
-.time{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.pic{
-    display: flex;
-    flex-direction: column;
-}
-input{
-    border-radius: 10px;
-    width: 100%;
-    height: 30px;
+h5 {
+  background: #1fa65a;
+  height: 15px;
+  width: 15px;
+  text-align: center;
+  border-radius: 15px;
 }
 
-.pic1{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.user {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.chat{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.time {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.left-side{
-    display: flex;
-    gap: 10px;
-    align-items: center;
+.pic {
+  display: flex;
+  flex-direction: column;
 }
-
-.right-side{
-    display: flex;
-    gap: 10px;
-    align-items: center;
-
-
+input {
+  border-radius: 10px;
+  width: 100%;
+  height: 30px;
 }
 
-.message{
-    border: 1px solid black;
-    border-radius: 9px;
-    
+.pic1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-.sender-1{
-    display: flex;
-    justify-content: end;
+.chat {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* position: fixed;
+    background: white;
+    width: 71%; */
+}
+.left-side {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
-.sender-2{
-    display: flex;
-    justify-content: start;
+.right-side {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
-.type{
-    width: 100%;
-    height: 40px;
-    border-radius: 1px;
+.message {
+  border: 1px solid black;
+  border-radius: 9px;
 }
 
-.foot{
-    display: flex;
-    gap:5px
-    
+.sender-1 {
+  display: flex;
+  justify-content: end;
+  background: #f3f3f3;
+  width: fit-content;
 }
-.image{
-border: 1px solid black;
+
+.sender-2 {
+  display: flex;
+  /* لما عملته fit content بطل يوخد end / start */
+
+  justify-self: start;
+  background: #D9FDD3;
+  width: fit-content;
+}
+.chat-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-image: url("pic4.jpg");
+  overflow: auto;
+}
+
+.type {
+  height: 40px;
+  border-radius: 2px;
+}
+
+.foot {
+  display: flex;
+  gap: 5px;
+  /* background: white;
+    width: 71%; */
+}
+.image {
+  border: 1px solid black;
 }
