--- a/youtube/style.css
+++ b/youtube/style.css
@@ -23,23 +23,30 @@ cursor: pointer;
 }
 
 .parent-1{
+    flex: 1;
     display: flex;
     justify-content: center;
 
 }
+h1{
+    color: white;
+}
 h3{
-    text-align: center;
     border-radius: 5px;
     margin-top: 2px;
     cursor: pointer;
-    background: red;
+
+}
+
+h3:hover{
+color: gray;
 }
 
 .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: red;
+    background: rgb(229, 25, 25);
 
 }
 .content{
