--- a/midTerm assisment - project/style.css
+++ b/midTerm assisment - project/style.css
@@ -1,11 +1,11 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background: #f8f9fa;
   margin: 0;
   padding: 0;
@@ -50,7 +50,8 @@ body {
 }
 
 .form input,
-.form select {
+.form select,
+.form textarea {
   width: 100%;
   padding: 8px 12px;
   margin-top: 5px;
@@ -59,9 +60,14 @@ body {
   border: 1px solid #ced4da;
   transition: border-color 0.3s;
 }
+.form textarea {
+  height: 90px;
+  resize: none;
+}
 
 .form input:focus,
-.form select:focus {
+.form select:focus,
+textarea:focus {
   border-color: #c39bcc;
   outline: none;
 }
@@ -83,8 +89,8 @@ body {
   background-color: #8d6796;
 }
 
-.main-table{
-  display: flex; 
+.main-table {
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -106,10 +112,9 @@ body {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.card:hover{
+.card:hover {
   transform: scale(1.05);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-
 }
 
 .card-title {
@@ -117,13 +122,10 @@ body {
   font-weight: bold;
 }
 
-
-#toggleViewBtn{
-  background-color:#c39bcc ;
+#toggleViewBtn {
+  background-color: #c39bcc;
   border: none;
 }
 #toggleViewBtn:hover {
   background-color: #8d6796;
 }
-
-
