blog project with api

--- a/blog_api/views/index.ejs
+++ b/blog_api/views/index.ejs
@@ -12,7 +12,7 @@
       class="img-fluid img"
       style="max-height: 390px"
     />
-    <p class="paragraph font-monospace text-start" style="max-height: 20px">
+    <p class="paragraph font-monospace text-start">
       "Plants are mainly multicellular organisms,<br />
       predominantly photosynthetic eukaryotes <br />
       of thekingdom Plantae.<br />
